2016-11-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-2

	* Mscripts_arts/q2_arts_y.m:
	* Mscripts_arts/q2_artscfile_full.m: Partition functions are now
	read from file, instead of using the internal ones.

2016-11-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-1

	* From now on this file must contain a version number on line 3.
	Follow the example above.

	* This is the first version with data and settings moved to
	qsmr_data. Skipping all details for this commit.

2016-10-24 Jimmy Petersson  <jimmy@molflow.com>

	* runscript.m: Adapt to L2C.

2016-10-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_meso.m:
	* Settings/q_std.m: New QFILT fields added.

	* Settings/q_fields.rst: Introduced a number of QFILT fields.

	* Mscripts_arts/q2_inv.m (q2_inv): Introduced L2C that required
	some reorganisation.

	* Mscripts_database/l1b_adjust_to_q.m: Some reorganisation and
	writes messages to L2C.

	* Mscripts_database/l1b_filter.m: Now considers QFILT settings and
	writes messages to L2C.

2016-10-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_atmlab/dimens.m: Copied from Atmlab.

2016-09-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4retqs): Species retrieval grid
	now named with iq, and not i as before. This to aviod a naming
	clash with temperature grid, that could happen before for some
	situations.

2016-09-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_atmlab/shift_longitudes.m: Added from Atmlab, with
	asserts removed.

2016-09-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Settings/q_std.m: Revision of fmode 1. Small changes for species
	retrieval settings. Deactivated pointing retrieval for this fmode.

	* Settings/q_std.m:
	* Settings/q_meso.m: General changes are Q.TB_CONTRAST_FAC = [];,
	Q.STOP_DX = 0.5 and Q.NOISE_CORRMODEL = 'expo';

	* Mscripts_atmlab/isboolean.m: